Fix large images and frames in content getting cut off

--- a/sites/all/themes/vonesc/sass/_main.scss
+++ b/sites/all/themes/vonesc/sass/_main.scss
@@ -586,6 +586,16 @@ tbody
             padding:0 20px;
         }
     }
+    
+    img
+    {
+        height: auto !important;
+        max-width: 100%;
+    }
+    iframe
+    {
+        max-width: 100%;
+    }
 }
 
 #first-widgets
